examples/fail/numop_bad_type.hax
module ZZZ::NumOpBadType;

sub main() -> Int {
  var Bool $b := true;
  return $b + $b;
}
